--- a/index.html
+++ b/index.html
@@ -60,6 +60,9 @@
             <li class="nav-item">
                 <a class="nav-link js-scroll-trigger" href="#photos">Photos</a>
             </li>
+            <li class="nav-item">
+                <a class="nav-link js-scroll-trigger" href="#contact">Contact</a>
+            </li>
         </ul>
     </div>
 </nav>
@@ -255,7 +258,8 @@
         <div class="w-100">
             <h2 class="mb-5">Interests</h2>
             <p>Travelling and exploring new places. Driving on the highway. Listening to music and Reading books.</p>
-            <p class="mb-0">I keep myself updated with the latest in technology. I enjoy reading about new programming languages and try out new frameworks whenever i get time.</p>
+            <p class="mb-0">I keep myself updated with the latest in technology. I enjoy reading about new programming
+                languages and try out new frameworks whenever i get time.</p>
         </div>
     </section>
 
@@ -294,7 +298,6 @@
                     <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
                     <li data-target="#carouselExampleIndicators" data-slide-to="1"></li>
                     <li data-target="#carouselExampleIndicators" data-slide-to="2"></li>
-                    <li data-target="#carouselExampleIndicators" data-slide-to="3"></li>
 
                 </ol>
                 <div class="carousel-inner">
@@ -307,9 +310,6 @@
                     <div class="carousel-item">
                         <img class="d-block w-100" src="img/Nature3.jpg" alt="Third slide">
                     </div>
-                    <div class="carousel-item">
-                        <img class="d-block w-100" src="img/Nature4.jpg" alt="Fourth slide">
-                    </div>
                 </div>
                 <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
                     <span class="carousel-control-prev-icon" aria-hidden="true"></span>
@@ -320,13 +320,97 @@
                     <span class="sr-only">Next</span>
                 </a>
             </div>
-
-
-
-
-
         </div>
     </section>
+
+    <section class="resume-section p-3 p-lg-5 d-flex align-items-center" id="contact">
+        <div class="w-100">
+            <h2 class="mb-5">Contact</h2>
+            <div>
+                <form id="contact-form" method="post" action="" role="form">
+
+                    <div class="messages"></div>
+
+                    <div class="controls">
+
+                        <div class="row">
+                            <div class="col-md-6">
+                                <div class="form-group">
+                                    <label for="form_name">Firstname *</label>
+                                    <input id="form_name" type="text" name="name" class="form-control"
+                                           placeholder="Please enter your firstname *" required="required"
+                                           data-error="Firstname is required.">
+                                    <div class="help-block with-errors"></div>
+                                </div>
+                            </div>
+                            <div class="col-md-6">
+                                <div class="form-group">
+                                    <label for="form_lastname">Lastname *</label>
+                                    <input id="form_lastname" type="text" name="surname" class="form-control"
+                                           placeholder="Please enter your lastname *" required="required"
+                                           data-error="Lastname is required.">
+                                    <div class="help-block with-errors"></div>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="row">
+                            <div class="col-md-6">
+                                <div class="form-group">
+                                    <label for="form_email">Email *</label>
+                                    <input id="form_email" type="email" name="email" class="form-control"
+                                           placeholder="Please enter your email *" required="required"
+                                           data-error="Valid email is required.">
+                                    <div class="help-block with-errors"></div>
+
+                                    <label for="form_message">Message *</label>
+                                    <textarea id="form_message" name="message" class="form-control"
+                                              placeholder="Message for me *" rows="5" required="required"
+                                              data-error="Please, leave me a message."></textarea>
+                                    <div class="help-block with-errors"></div>
+                                </div>
+
+                                <div class="col-md-12">
+                                    <input type="submit" class="btn btn-success btn-send" value="Send message">
+                                </div>
+
+
+                            </div>
+                            <span class="col-md-6">
+                                <!--<iframe width="100%" height="350" frameborder="0" scrolling="no" marginheight="0"
+                                        marginwidth="0"
+                                        src="https://maps.google.com/maps?q=bangalore"></iframe>-->
+
+                                <iframe width=100% height=235 id="gmap_canvas" src="https://maps.google.com/maps?q=bangalore&t=&z=13&ie=UTF8&iwloc=&output=embed" frameborder="0" scrolling="no" marginheight="0" marginwidth="0"></iframe>
+
+
+                            </span>
+
+                        </div>
+
+                        <div class="col-md-6">
+                            <!--<div class="form-group">
+                                <label for="form_need">Please specify your need *</label>
+                                <select id="form_need" name="need" class="form-control" required="required" data-error="Please specify your need.">
+                                    <option value=""></option>
+                                    <option value="Request quotation">Request quotation</option>
+                                    <option value="Request order status">Request order status</option>
+                                    <option value="Request copy of an invoice">Request copy of an invoice</option>
+                                    <option value="Other">Other</option>
+                                </select>
+                                <div class="help-block with-errors"></div>
+                            </div>-->
+                        </div>
+
+                    </div>
+            </div>
+
+            </form>
+
+        </div>
+
+
+</div>
+</section>
 
 </div>
 
