Made some changes to the education

--- a/index.html
+++ b/index.html
@@ -176,7 +176,7 @@
                     <h3 class="mb-0">International Institute of Information Technology, Bangalore</h3>
                     <div class="subheading mb-3">Master of Technology</div>
                     <div>Information Technology</div>
-                    <p>GPA: 3.1</p>
+                    <!--<p>GPA: 3.1</p>-->
                 </div>
                 <div class="resume-date text-md-right">
                     <span class="text-primary">2009 - 2011</span>
@@ -188,7 +188,7 @@
                     <h3 class="mb-0">National Institute of Technology, Allahabad</h3>
                     <div class="subheading mb-3">Bachelor of Technology</div>
                     <div>Computer Science and Engineering</div>
-                    <p>CGPA: 7.4</p>
+                    <!--<p>CGPA: 7.4</p>-->
                 </div>
                 <div class="resume-date text-md-right">
                     <span class="text-primary">2003 - 2007</span>
